--- a/style.css
+++ b/style.css
@@ -1,31 +1,25 @@
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 50px;
-}
-
-#status {
-    font-size: 20px;
-    margin-top: 20px;
-}
-
-#plot {
-    margin-top: 20px;
-}
-
-.centered-plot {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+#console {
     width: 100%;
-    aspect-ratio: 1 / 1;
-    /* height: 50vw; *//* Mantener el aspecto cuadrado */
-    /* max-height: 50%;*/
+    min-height: 60px;
+    overflow: hidden;
+    background-color: white;
+    color: black;
+    font-family: monospace;
+    border: none;
+    resize: none;
+    padding: 10px;
+    font-size: small;
 }
-@media (max-width: 600px) {
-    .centered-plot {
-        width: 90%;
-        height: 90vw;
-        max-height: 90%;
-    }
+
+span.input-group-text {
+    cursor: help;
+}
+
+.card-header {
+    font-weight: bold;
+    background-color: rgb(33 37 41 / 13%) !important
+}
+
+.progress{
+    border-radius: 3px;
 }
